fix: correct center-aligned slide paragraph alignment

--- a/browser/style.css
+++ b/browser/style.css
@@ -132,6 +132,7 @@ table, pre {
 
 .slide[data-align='center'] {
   align-items: center;
+  text-align: center;
 }
 
 .slide[data-align='left'] {
